--- a/athena_server/app/views/announcements/index.html.erb
+++ b/athena_server/app/views/announcements/index.html.erb
@@ -11,5 +11,10 @@
 	<div id="enroll">
 		ENROLL
 	</div>
+
+	<div class="class_tab">
+		<div class="class_name">MATH 42</div>
+		<div class="color_strip"></div>
+	</div>
 </div>
 <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis qui aliquid nihil nisi magni placeat iusto nulla ab, voluptas numquam, quas ad natus rerum minus atque, tempora accusamus modi. Vitae. lorem*20 </div>
