--- a/athena_server/app/assets/stylesheets/announcements.css
+++ b/athena_server/app/assets/stylesheets/announcements.css
@@ -5,7 +5,6 @@
 #sidebar {
 	color: white;
     background-color: black;
-	border-right: 3px solid #CACACA;
 	display: inline-block;
 	height: 100%;
 	position: fixed;
@@ -26,7 +25,7 @@
 	text-align: center;
 	background-color: #808080;
 	padding: 10px;
-	margin: 50px 33%;
+	margin: 50px 33% 40px 33%;
 	border-radius: 5px;
 }
 
@@ -38,14 +37,35 @@
 
 .class_tab {
 	width: 100%;
+	height: 70px;
+	transition: all .15s ease-in-out;
 }
 
 .class_name {
-	
+	width: 270px;
+	height: 70px;
+	float: left;
+	font-family: HelveticaNeue, Helvatica;
+	padding: 25px 40px;
+	font-size: 16px;
 }
 
 .color_strip {
 	background-color: blue;
+	width: 10px;
+	height: 70px;
+	float: right;
+	transition: all .15s ease-in-out;
+}
+
+.class_tab:hover .color_strip{
 	width: 20px;
-	height: 100%;
+}
+
+.class_tab:hover {
+	background-color: #333333;
+}
+
+.clear {
+	clear: both;
 }
