--- a/athena_server/app/views/announcements/index.html.erb
+++ b/athena_server/app/views/announcements/index.html.erb
@@ -9,7 +9,7 @@
 	</a>
 
 	<div id="enroll">
-		ENROLL
+		<button type="button" class="btn btn-lg btn-default">ENROLL</button>
 	</div>
 
 	<div class="class_tab">
@@ -17,4 +17,16 @@
 		<div class="color_strip"></div>
 	</div>
 </div>
-<div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis qui aliquid nihil nisi magni placeat iusto nulla ab, voluptas numquam, quas ad natus rerum minus atque, tempora accusamus modi. Vitae. lorem*20 </div>
+
+<div id="content">
+
+<div class="col-md-3"></div>
+
+<div class="col-md-6">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis qui aliquid nihil nisi magni placeat iusto nulla ab, voluptas numquam, quas ad natus rerum minus atque, tempora accusamus modi. Vitae. lorem*20
+
+<button type="button" class="btn btn-lg btn-default">Default</button>
+</div>
+
+<div class="col-md-3"></div>
+ </div>
