--- a/athena_server/app/assets/stylesheets/announcements.css
+++ b/athena_server/app/assets/stylesheets/announcements.css
@@ -16,7 +16,6 @@
 	height: 100%;
 	padding-left: 290px;
 	width: 100%;
-	background-color: red;
 }
 
 #enroll {
@@ -39,6 +38,10 @@
 	width: 100%;
 	height: 70px;
 	transition: all .15s ease-in-out;
+
+	/*background: linear-gradient(to right, black 50%, blue 50%);
+	background-size: 200% 100%;
+	background-position:left bottom;*/
 }
 
 .class_name {
@@ -64,8 +67,13 @@
 
 .class_tab:hover {
 	background-color: #333333;
+	/*opacity: 0.6;*/
 }
 
 .clear {
 	clear: both;
+}
+
+.selected_class {
+	
 }
