--- a/athena_server/app/views/announcements/index.html.erb
+++ b/athena_server/app/views/announcements/index.html.erb
@@ -1,9 +1,5 @@
 <% content_for :head do %>
-<%= stylesheet_link_tag "bootstrap-select" %>
-<%= javascript_include_tag 'main' %>
-<%= javascript_include_tag 'highlight' %>
-<%= javascript_include_tag 'bootstrap-switch' %>
-
+<%= stylesheet_link_tag "announcements" %>
 <% end %>
 
 <div id="sidebar">
@@ -13,73 +9,24 @@
 	</a>
 
 	<div id="enroll">
-
-	    <center><a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal">Enroll</a></center>
+		<button type="button" class="btn btn-lg btn-default">ENROLL</button>
 	</div>
+
 	<div class="class_tab">
 		<div class="class_name">MATH 42</div>
 		<div class="color_strip"></div>
 	</div>
 </div>
 
-<div id="content" class="container">
-
-<div class="row"> 
-
-	<div class="col-md-3"></div>
-	<div class="col-md-6">
-	<input id="switch-state" type="checkbox" checked data-on-text = "List" data-off-color = 'warning' data-off-text = "Calendar"/>
-	</div> 
-	<div class="col-md-3"></div>
-
-</div>
-
-<div class="row">
+<div id="content">
 
 <div class="col-md-3"></div>
 
 <div class="col-md-6">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis qui aliquid nihil nisi magni placeat iusto nulla ab, voluptas numquam, quas ad natus rerum minus atque, tempora accusamus modi. Vitae. lorem*20
 
-    PUT EXAMPLE BOX HERE
-    
+<button type="button" class="btn btn-lg btn-default">Default</button>
 </div>
 
 <div class="col-md-3"></div>
-
-</div>
  </div>
-
- <!-- Modal HTML -->
-    <div id="myModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">Enroll in a Course</h4>
-                </div>
-                <div class="modal-body">
-                     <form class="form-horizontal">
-                        <div class="form-group">
-                        <label for="courseName" class="col-sm-2 control-label">Course</label>
-                        <div class="col-sm-10">
-                        <input type="email" class="form-control" id="courseName" placeholder="Enter Course Name">
-                        </div>
-                        </div>
-                    </form>
-					
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                        <label for="courseID" class="col-sm-2 control-label">URL</label>
-                        <div class="col-sm-10">
-                        <input type="email" class="form-control" id="courseID" placeholder="Enter Course URL">
-                        </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Enroll</button>
-                </div>
-            </div>
-        </div>
-    </div>
