--- a/athena_server/app/views/announcements/index.html.erb
+++ b/athena_server/app/views/announcements/index.html.erb
@@ -9,7 +9,7 @@
 	</a>
 
 	<div id="enroll">
-		<button type="button" class="btn btn-lg btn-default">ENROLL</button>
+    <center><a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal">Enroll</a></center>
 	</div>
 
 	<div class="class_tab">
@@ -19,14 +19,72 @@
 </div>
 
 <div id="content">
+<div class="container-fluid">
+	<div class="row">
 
-<div class="col-md-3"></div>
+		<div class="col-md-3"></div>
+		<div class="col-md-3">
+			<!-- TOPBAR -->
+			<div class="btn-group" role="group" aria-label="...">
+              <button id="lists" type="button" class="btn btn-default disabled">List</button>
+              <button id="calendar" type="button" class="btn btn-default">Calendar</button>
+            </div>
+		</div>
+		<div class="col-md-3">
+			<select class="form-control">
+            	<option value="one">One</option>
+            	<option value="two">Two</option>
+            	<option value="three">Three</option>
+            	<option value="four">Four</option>
+            	<option value="five">Five</option>
+            </select>
+		</div>
+		<div class="col-md-3"></div>
 
-<div class="col-md-6">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis qui aliquid nihil nisi magni placeat iusto nulla ab, voluptas numquam, quas ad natus rerum minus atque, tempora accusamus modi. Vitae. lorem*20
-
-<button type="button" class="btn btn-lg btn-default">Default</button>
+	</div>
+	<div class="row">
+		<div class="col-md-3"></div>
+		<div class="col-md-6">
+			<div class="post_box">
+				Test Post
+			</div>
+		</div>
+		<div class="col-md-3"></div>
+	</div>
 </div>
-
-<div class="col-md-3"></div>
  </div>
+
+    <!-- Modal HTML -->
+    <div id="myModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Enroll in a Course</h4>
+                </div>
+                <div class="modal-body">
+                     <form class="form-horizontal">
+                        <div class="form-group">
+                        <label for="courseName" class="col-sm-2 control-label">Course</label>
+                        <div class="col-sm-10">
+                        <input type="email" class="form-control" id="courseName" placeholder="Enter Course Name">
+                        </div>
+                        </div>
+                    </form>
+
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                        <label for="courseID" class="col-sm-2 control-label">URL</label>
+                        <div class="col-sm-10">
+                        <input type="email" class="form-control" id="courseID" placeholder="Enter Course URL">
+                        </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Enroll</button>
+                </div>
+            </div>
+        </div>
+    </div>
