--- a/athena_server/app/views/announcements/index.html.erb
+++ b/athena_server/app/views/announcements/index.html.erb
@@ -46,9 +46,14 @@
 	<div class="row">
 		<div class="col-md-3"></div>
 		<div class="col-md-6">
-			<div class="post_box">
-				Test Post
-			</div>
+				<% Update.all.order(:date).reverse_order.each do |update| %>
+					<div class="post_box">
+						<h2><%= update.title %></h2>
+						<h2><%= update.date %></h2>
+						<h2><%= update.course.name %></h2>
+						<p><%= update.body %></p>
+					</div>
+				<% end %>
 		</div>
 		<div class="col-md-3"></div>
 	</div>
@@ -68,7 +73,7 @@
                         <div class="form-group">
                         <label for="courseName" class="col-sm-2 control-label">Course</label>
                         <div class="col-sm-10">
-                        <input type="email" class="form-control" id="courseName" placeholder="Enter Course Name">
+                        <input type="text" class="form-control" id="courseName" placeholder="Enter Course Name">
                         </div>
                         </div>
                     </form>
@@ -77,7 +82,7 @@
                         <div class="form-group">
                         <label for="courseID" class="col-sm-2 control-label">URL</label>
                         <div class="col-sm-10">
-                        <input type="email" class="form-control" id="courseID" placeholder="Enter Course URL">
+                        <input type="url" class="form-control" id="courseID" placeholder="Enter Course URL">
                         </div>
                         </div>
                     </form>
