--- a/athena_server/app/assets/stylesheets/announcements.css
+++ b/athena_server/app/assets/stylesheets/announcements.css
@@ -68,7 +68,7 @@
 }
 
 .class_tab:hover {
-	background-color: #666;
+	background-color: #727272;
 	cursor: pointer;
 }
 
@@ -77,6 +77,28 @@
 }
 
 .post_box{
-	border: 1px solid black;
 	margin: 20px 0;
+	padding: 15px 35px;
+	border-radius: 4px;
+	box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .15);
+
+}
+
+.header {
+	font-size: 28px;
+	font-weight: bolder;
+	display: block;
+}
+
+.date {
+	color: #838383;
+	font-family: Helvetica;
+	font-size: 15px;
+	margin: 5px 10px 20px 5px;
+}
+
+.body {
+	margin-top: 20px;
+	font-size: 17px;
+
 }
