--- a/athena_server/app/assets/stylesheets/announcements.css
+++ b/athena_server/app/assets/stylesheets/announcements.css
@@ -43,7 +43,9 @@
 .class_tab {
 	width: 100%;
 	height: 70px;
-	transition: all .15s ease-in-out;
+	transition: all .3s ease-in-out;
+	background-size: 200% 100%;
+	background-position:left bottom;
 }
 
 .class_name {
@@ -68,7 +70,7 @@
 }
 
 .class_tab:hover {
-	background-color: #727272;
+	/*background-color: #727272;*/
 	cursor: pointer;
 }
 
@@ -81,7 +83,15 @@
 	padding: 15px 35px;
 	border-radius: 4px;
 	box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .15);
+}
 
+.piazza_logo {
+	float: right;
+}
+
+.piazza_logo img {
+	height: 15px;
+	width: 60px;
 }
 
 .header {
