--- a/athena_server/app/assets/stylesheets/announcements.css
+++ b/athena_server/app/assets/stylesheets/announcements.css
@@ -23,16 +23,22 @@
 	border-radius: 5px;
 }
 
-#enroll button {
-	font-weight: bold;
-}
-
 #enroll_button {
 	background-color: #404040;
 	color: white;
 	font-weight: bolder;
 }
 
+#piazza {
+	margin: 30px 33% 30px 33%;
+	border-radius: 5px;
+}
+
+#piazza_button {
+	background-color: #587C9F;
+	color: white;
+	font-weight: bolder;
+}
 
 .athena_logo {
 	width: 250px;
