--- a/athena_server/app/views/announcements/index.html.erb
+++ b/athena_server/app/views/announcements/index.html.erb
@@ -31,9 +31,9 @@
 	<div style="height: 20px;"></div>
 	<div class="row" class>
 		<!-- TOPBAR ROW -->
-		<div class="col-md-6"></div>
+		<div class="col-md-2"></div>
 
-		<div class="col-md-4">
+		<div class="col-md-2">
 			<!-- <div class="btn-group" role="group" aria-label="...">
               <button id="lists" type="button" class="btn btn-default disabled">List</button>
               <button id="calendar" type="button" class="btn btn-default">Calendar</button>
@@ -45,8 +45,8 @@
             	<option value="piazza">Piazza</option>
             </select>
 		</div>
-		<div class="col-md-2"></div>
-
+		<div class="col-md-8"></div>
+	<div style="height: 70px;"></div>
 	</div>
 	<div class="row">
 		<div class="col-md-2"></div>
